--- a/taxfinder.yaml
+++ b/taxfinder.yaml
@@ -13,12 +13,33 @@ dependencies:
   - argparse-dataclass=2.0.0=pyhd8ed1ab_0
   - attmap=0.13.2=pyhd8ed1ab_0
   - attrs=24.2.0=pyh71513ae_0
+  - aws-c-auth=0.7.30=hec5e740_0
+  - aws-c-cal=0.7.4=hfd43aa1_1
+  - aws-c-common=0.9.28=hb9d3cd8_0
+  - aws-c-compression=0.2.19=h756ea98_1
+  - aws-c-event-stream=0.4.3=h235a6dd_1
+  - aws-c-http=0.8.9=h5e77a74_0
+  - aws-c-io=0.14.18=h2af50b2_12
+  - aws-c-mqtt=0.10.5=h0009854_0
+  - aws-c-s3=0.6.5=hbaf354b_4
+  - aws-c-sdkutils=0.1.19=h756ea98_3
+  - aws-checksums=0.1.18=h756ea98_11
+  - aws-crt-cpp=0.28.2=h6c0439f_6
+  - aws-sdk-cpp=1.11.379=h5a9005d_9
+  - azure-core-cpp=1.13.0=h935415a_0
+  - azure-identity-cpp=1.8.0=hd126650_2
+  - azure-storage-blobs-cpp=12.12.0=hd2e3451_0
+  - azure-storage-common-cpp=12.7.0=h10ac4d7_1
+  - azure-storage-files-datalake-cpp=12.11.0=h325d260_1
+  - biopython=1.84=py312h9a8786e_0
   - boltons=24.0.0=pyhd8ed1ab_0
+  - brotli=1.1.0=hd590300_1
+  - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py312h30efb56_1
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.33.0=ha66036c_0
-  - ca-certificates=2024.7.4=hbcca054_0
-  - certifi=2024.7.4=pyhd8ed1ab_0
+  - ca-certificates=2025.1.31=hbcca054_0
+  - certifi=2025.1.31=pyhd8ed1ab_0
   - cffi=1.17.0=py312h1671c18_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - coin-or-cbc=2.10.12=h8b142ea_0
@@ -35,6 +56,8 @@ dependencies:
   - conda-package-streaming=0.10.0=pyhd8ed1ab_0
   - configargparse=1.7=pyhd8ed1ab_0
   - connection_pool=0.0.3=pyhd3deb0d_0
+  - contourpy=1.3.1=py312h68727a3_0
+  - cycler=0.12.1=pyhd8ed1ab_1
   - datrie=0.8.2=py312h98912ed_7
   - distro=1.9.0=pyhd8ed1ab_0
   - docutils=0.21.2=pyhd8ed1ab_0
@@ -42,9 +65,13 @@ dependencies:
   - eido=0.2.2=pyhd8ed1ab_0
   - exceptiongroup=1.2.2=pyhd8ed1ab_0
   - fmt=10.2.1=h00ab1b0_0
+  - fonttools=4.56.0=py312h178313f_0
+  - freetype=2.12.1=h267a509_2
   - frozendict=2.4.4=py312h9a8786e_0
+  - gflags=2.2.2=h5888daf_1005
   - gitdb=4.0.11=pyhd8ed1ab_0
   - gitpython=3.1.43=pyhd8ed1ab_0
+  - glog=0.7.1=hbabe93e_0
   - h2=4.1.0=pyhd8ed1ab_0
   - hmmer=3.4=hdbdd923_1
   - hpack=4.0.0=pyh9f0ad1d_0
@@ -56,39 +83,70 @@ dependencies:
   - importlib_resources=6.4.4=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_0
   - jinja2=3.1.4=pyhd8ed1ab_0
+  - joblib=1.4.2=pyhd8ed1ab_0
   - jsonpatch=1.33=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py312h7900ff3_0
   - jsonschema=4.23.0=pyhd8ed1ab_0
   - jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
   - jupyter_core=5.7.2=py312h7900ff3_0
   - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.8=py312h84d6215_0
   - krb5=1.21.3=h659f571_0
+  - lcms2=2.17=h717163a_0
   - ld_impl_linux-64=2.40=hf3520f5_7
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20240116.2=cxx17_he02047a_1
   - libarchive=3.7.4=hfca40fe_0
+  - libarrow=17.0.0=hc80a628_14_cpu
+  - libarrow-acero=17.0.0=h5888daf_14_cpu
+  - libarrow-dataset=17.0.0=h5888daf_14_cpu
+  - libarrow-substrait=17.0.0=hf54134d_14_cpu
   - libblas=3.9.0=23_linux64_openblas
+  - libbrotlicommon=1.1.0=hd590300_1
+  - libbrotlidec=1.1.0=hd590300_1
+  - libbrotlienc=1.1.0=hd590300_1
   - libcblas=3.9.0=23_linux64_openblas
+  - libcrc32c=1.1.2=h9c3ff4c_0
   - libcurl=8.9.1=hdb1bdb2_0
+  - libdeflate=1.23=h4ddbbb0_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=hd590300_2
+  - libevent=2.1.12=hf998b51_1
   - libexpat=2.6.2=h59595ed_0
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=14.1.0=h77fa898_0
+  - libgcc=14.2.0=h767d61c_2
+  - libgcc-ng=14.2.0=h69a702a_2
   - libgfortran-ng=14.1.0=h69a702a_0
   - libgfortran5=14.1.0=hc5f4f2c_0
-  - libgomp=14.1.0=h77fa898_0
+  - libgomp=14.2.0=h767d61c_2
+  - libgoogle-cloud=2.29.0=h435de7b_0
+  - libgoogle-cloud-storage=2.29.0=h0121fbd_0
+  - libgrpc=1.62.2=h15f2491_0
   - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=23_linux64_openblas
   - liblapacke=3.9.0=23_linux64_openblas
+  - liblzma=5.6.4=hb9d3cd8_0
   - libmamba=1.5.8=had39da4_0
   - libmambapy=1.5.8=py312hd9e9ff6_0
   - libnghttp2=1.58.0=h47da74e_1
   - libnsl=2.0.1=hd590300_0
   - libopenblas=0.3.27=pthreads_hac2b453_1
+  - libparquet=17.0.0=h39682fd_14_cpu
+  - libpng=1.6.47=h943b412_0
+  - libprotobuf=4.25.3=hd5b35b9_1
+  - libre2-11=2023.09.01=h5a48ba9_2
   - libsolv=0.7.30=h3509ff9_0
   - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
-  - libstdcxx-ng=14.1.0=hc0a3c3a_0
+  - libstdcxx=14.2.0=h8f9b012_2
+  - libstdcxx-ng=14.2.0=h4852527_2
+  - libthrift=0.20.0=h0e7cc3e_1
+  - libtiff=4.7.0=hd9ff511_3
+  - libutf8proc=2.8.0=hf23e847_1
   - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.5.0=h851e524_0
+  - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.12.7=he7c6b58_4
   - libzlib=1.3.1=h4ab18f5_1
@@ -97,28 +155,38 @@ dependencies:
   - lzo=2.10=hd590300_1001
   - markdown-it-py=3.0.0=pyhd8ed1ab_0
   - markupsafe=2.1.5=py312h98912ed_0
+  - matplotlib-base=3.10.1=py312hd3ec401_0
   - mdurl=0.1.2=pyhd8ed1ab_0
   - menuinst=2.1.2=py312h7900ff3_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - nbformat=5.10.4=pyhd8ed1ab_0
   - ncurses=6.5=h59595ed_0
   - numpy=2.1.0=py312h1103770_0
-  - openssl=3.3.1=h4bc722e_2
+  - openjpeg=2.5.3=h5fbd93e_0
+  - openssl=3.4.1=h7b32b05_0
+  - orc=2.0.2=h669347b_0
   - packaging=24.1=pyhd8ed1ab_0
   - pandas=2.2.2=py312h1d6d2e6_1
   - peppy=0.40.5=pyhd8ed1ab_0
+  - pillow=11.1.0=py312h80c1187_0
   - pip=24.2=pyhd8ed1ab_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
   - plac=1.4.3=pyhd8ed1ab_0
   - platformdirs=4.2.2=pyhd8ed1ab_0
   - pluggy=1.5.0=pyhd8ed1ab_0
   - psutil=6.0.0=py312h9a8786e_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
   - pulp=2.8.0=py312h7900ff3_0
+  - pyarrow=17.0.0=py312h9cebb41_2
+  - pyarrow-core=17.0.0=py312h01725c0_2_cpu
   - pybind11-abi=4=hd8ed1ab_3
+  - pycirclize=1.9.0=pyhd8ed1ab_0
   - pycosat=0.6.6=py312h98912ed_0
   - pycparser=2.22=pyhd8ed1ab_0
   - pygments=2.18.0=pyhd8ed1ab_0
   - pyparsing=3.1.2=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
+  - pytaxonkit=0.8=pyhdfd78af_0
   - pytest=8.3.2=pyhd8ed1ab_0
   - python=3.12.5=h2ad013b_0_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
@@ -127,6 +195,8 @@ dependencies:
   - python_abi=3.12=5_cp312
   - pytz=2024.1=pyhd8ed1ab_0
   - pyyaml=6.0.2=py312h41a817b_0
+  - qhull=2020.2=h434a139_5
+  - re2=2023.09.01=h7f4b329_2
   - readline=8.2=h8228510_1
   - referencing=0.35.1=pyhd8ed1ab_0
   - reproc=14.2.4.post0=hd590300_1
@@ -137,6 +207,7 @@ dependencies:
   - rpds-py=0.20.0=py312hf008fa9_0
   - ruamel.yaml=0.18.6=py312h98912ed_0
   - ruamel.yaml.clib=0.2.8=py312h98912ed_0
+  - s2n=1.5.5=h3931f03_0
   - setuptools=72.2.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - slack-sdk=3.31.0=pyha770c72_0
@@ -149,8 +220,10 @@ dependencies:
   - snakemake-interface-report-plugins=1.0.0=pyhdfd78af_0
   - snakemake-interface-storage-plugins=3.3.0=pyhdfd78af_0
   - snakemake-minimal=8.18.2=pyhdfd78af_0
+  - snappy=1.2.1=h8bd8927_1
   - stopit=1.1.2=py_0
   - tabulate=0.9.0=pyhd8ed1ab_1
+  - taxonkit=0.17.0=h9ee0642_1
   - throttler=1.2.2=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - tomli=2.0.1=pyhd8ed1ab_0
@@ -161,10 +234,13 @@ dependencies:
   - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
   - ubiquerg=0.8.0=pyhd8ed1ab_0
+  - unicodedata2=16.0.0=py312h66e93f0_0
   - urllib3=2.2.2=pyhd8ed1ab_1
   - veracitools=0.1.3=py_0
   - wheel=0.44.0=pyhd8ed1ab_0
   - wrapt=1.16.0=py312h98912ed_0
+  - xorg-libxau=1.0.12=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
   - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
   - yaml-cpp=0.8.0=h59595ed_0
